fixed footer icons not showing bug

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 // remove social items for small/mobile view
-body > footer > .social-media {
+.social-media {
     display: none;
 }
 
